[package]
name = "mandlebrot"
version = "0.1.0"
authors = ["Dylan <meeusdylan@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.1.27" # support for complex numbers
image = "0.13.0"
crossbeam = "0.2.8"
